--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,23 +1,23 @@
 {
-    "name": "Agenda Beauty",
-    "short_name": "Agenda",
+    "name": "Girls Date",
+    "short_name": "Girls Date",
     "description": "Sistema de reservas para salón de belleza",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#e9c7cf",
-    "theme_color": "#e84b7a",
+    "background_color": "#eedcba",
+    "theme_color": "#8b5a2b",
     "orientation": "portrait",
     "icons": [
         {
-            "src": "/static/icon-192.svg",
+            "src": "/static/icon-192.png",
             "sizes": "192x192",
-            "type": "image/svg+xml",
+            "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "/static/icon-192.svg",
+            "src": "/static/icon-192.png",
             "sizes": "512x512",
-            "type": "image/svg+xml",
+            "type": "image/png",
             "purpose": "any maskable"
         }
     ]
